# zmk-a320-driver

./: CMakeLists.txt  Kconfig
dts/bindings/: avago,a320.yaml  avago-a320.yaml  touchpad.yaml
include/zmk/drivers/: a320.h  touchpad.h
src/: a320.c  touchpad.c
